@@ -19,6 +19,6 @@
    Software Foundation, 59 Temple Place - Suite 330, Boston, MA
    02111-1307, USA. */
 
-#define MIKTEX_COMP_J2000_VERSION 3327
+#define MIKTEX_COMP_J2000_VERSION 3328
 
 #include <miktex/Core/Version>
